# elysia-panel

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reste_a_faire.md  turbo.json
.github/workflows/: ci.yml
api/openapi/: elysia.proto
backend/: .env.example  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/api-keys/: api-keys.controller.ts  api-keys.module.ts  api-keys.service.ts
backend/src/audit/: audit.controller.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
billing/: README.md
cli/: package.json  tsconfig.json
cli/src/: index.ts
daemon/: README.md  go.mod  go.sum
daemon/proto/: elysia.pb.go  elysia_grpc.pb.go
dashboard/: .env.local.example  package.json
docker-images/: README.md
docker-images/base/: Dockerfile
docker-images/generic/: Dockerfile
docker-images/minecraft-bedrock/: Dockerfile  entrypoint.sh
docker-images/minecraft-java/: Dockerfile  entrypoint.sh
docs/architecture/: 01-global-architecture.md  16-security.md
extensions/: README.md
installer/: README.md  install.sh
installer/templates/: elysia-backend.service  elysia-dashboard.service  elysia-node.service  nginx-elysia.conf.template
marketplace/: README.md
monitoring/prometheus/: prometheus.yml
sdk/go/: client.go  go.mod
sdk/python/: pyproject.toml
sdk/python/elysia/: __init__.py  client.py
sdk/typescript/: README.md  package.json  tsconfig.json
themes/: README.md
(+120 files in other folders)
